--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+/* font-family: 'Open Sans', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* font-family: 'Public Sans', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+/* font-family: 'Lato', sans-serif; */
+
 * {
    box-sizing: border-box;
    margin: 0;
@@ -9,14 +18,28 @@ body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
-   font-family: 'Inter', sans-serif;
+   font-family: 'Public Sans', sans-serif;
    font-weight: 400;
    font-size: 20px;
+   background-color: #EBECF0;
 }
 
 .container {
-   max-width: 1440px;
+   max-width: 1280px;
+   /* width: 210mm;
+   height: 297mm; */
+   background-color: white;
    margin: 0 auto;
-   /* padding-left: 109px;
-   padding-right: 109px; */
+}
+
+.left-part {
+   max-width: 40%;
+   background-color: #f4f4f4;
+   padding: 2.2rem;
+}
+
+.left-part .left-part__img img {
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
 }
