--- a/style.css
+++ b/style.css
@@ -25,21 +25,67 @@ body {
 }
 
 .container {
-   max-width: 1280px;
+   max-width: 1024px;
    /* width: 210mm;
    height: 297mm; */
    background-color: white;
    margin: 0 auto;
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.left-part {
+.profile__left-part {
    max-width: 40%;
    background-color: #f4f4f4;
-   padding: 2.2rem;
+   padding: 2.8rem;
 }
 
-.left-part .left-part__img img {
+.profile__left-part .profile__img {
+   margin-bottom: 1rem;
+}
+
+.profile__left-part .profile__img img {
    width: 100%;
    height: 100%;
    border-radius: 50%;
+   border: 0.7rem solid white;
+   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.profile__title {
+   font-family: 'Public Sans', sans-serif;
+   font-size: 1.2rem;
+   font-weight: 600;
+   padding: 0.6rem;
+   color: white;
+   background-color: #444440;
+   text-align: center;
+   margin: 1rem 0;
+}
+
+.contacts__list {
+   list-style: none;
+   font-family: 'Lato', sans-serif;
+   color: #444440;
+   font-size: 1rem;
+}
+
+.contacts__item {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+   padding-bottom: 0.5rem;
+}
+
+.icon {
+   width: 1.8rem;
+   height: 1.8rem;
+}
+
+.contacts__link {
+   color: #444440;
+   text-decoration: none;
+}
+
+svg {
+   fill: #444440;
 }
